crates/codira_codegen/src/snapshots/codira_codegen__test__negate_op_i8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func negate(a: i8) -> i8 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @negate(i8 %0) local_unnamed_addr #0 {
body:
  %neg = sub i8 0, %0
  ret i8 %neg
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
