crates/codira_codegen/src/snapshots/codira_codegen__test__nested_private_extern_fn.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    extern func extern_fn() -> f32;\n\n    func private_fn() -> f32 {\n        extern_fn()\n    }\n\n    public func main() -> f32 {\n        private_fn()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }

@dispatchTable = external local_unnamed_addr global %DispatchTable

define float @private_fn() local_unnamed_addr {
body:
  %extern_fn_ptr = load ptr, ptr @dispatchTable, align 8
  %extern_fn = tail call float %extern_fn_ptr()
  ret float %extern_fn
}

define float @main() local_unnamed_addr {
body:
  %extern_fn_ptr.i = load ptr, ptr @dispatchTable, align 8
  %extern_fn.i = tail call float %extern_fn_ptr.i()
  ret float %extern_fn.i
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [1 x ptr] zeroinitializer
