crates/codira_codegen/src/snapshots/codira_codegen__test__nested_private_fn.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    func nested_private_fn() -> i32 {\n        1\n    }\n\n    func private_fn() -> i32 {\n        nested_private_fn()\n    }\n\n    public func main() -> i32 {\n        private_fn()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i32 @nested_private_fn() local_unnamed_addr #0 {
body:
  ret i32 1
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i32 @private_fn() local_unnamed_addr #0 {
body:
  ret i32 1
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i32 @main() local_unnamed_addr #0 {
body:
  ret i32 1
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
